added liri project and moved about me

--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -40,6 +40,13 @@
             "image": "assets/images/trivia.png",
             "technologies": ""
 
+        },
+        {
+            "name": "LIRI Node App",
+            "link": "https://github.com/stmu009/liri-node-app",
+            "image": "assets/images/c3po.png",
+            "technologies": ""
+
         }
     ]
 }
