fixed image name

--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -44,7 +44,7 @@
         {
             "name": "LIRI Node App",
             "link": "https://github.com/stmu009/liri-node-app",
-            "image": "assets/images/c3po.png",
+            "image": "assets/images/c3po.jpg",
             "technologies": ""
 
         }
